--- a/rend3-egui/Cargo.toml
+++ b/rend3-egui/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.57"
 
 [dependencies]
 egui = "0.16.0"
-egui_wgpu_backend = "0.16.0"
+egui_wgpu_backend = { git = "https://github.com/setzer22/egui_wgpu_backend", branch = "feat/accept_textureview" } 
 epi = "0.16.0"
 glam = "0.20.0"
 rend3 = { version = "^0.2.0", path = "../rend3" }
